<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/outline_home_white_24"
        android:title="@string/action_home" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/action_cart" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/action_favorite" />
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/baseline_notifications_white_24"
        android:title="@string/action_notification" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/action_profile" />
</menu>